[package]
name = "buck2_common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
dirs = { workspace = true }
faccess = { workspace = true }
futures = { workspace = true }
globset = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
once_cell = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
ref-cast = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
sha-1 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
nix = { workspace = true }
derivative = { workspace = true }
parking_lot = { workspace = true }

allocative = { workspace = true }
dice = { path = "../dice/dice" }
# @oss-disable: edenfs = { package = "thrift", path = "../../eden/fs/service" }
fbinit = { workspace = true }
# @oss-disable: fb303_core = { package = "fb303_core", path = "../../fb303/thrift" }
gazebo = { workspace = true }
gazebo_lint.version = "0.1"
gazebo_lint.optional = true
# @oss-disable: gazebo_lint.path = "../gazebo_lint/gazebo_lint"
internment_tweaks = { path = "../shed/internment_tweaks" }
more_futures = { workspace = true }
sorted_vector_map = { workspace = true }

buck2_core = { path = "../app/buck2_core" }
buck2_data = { path = "../buck2_data" }

[target.'cfg(target_os = "linux")'.dependencies]
xattr = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
xattr = { workspace = true }

[features]
# @oss-disable: default = ["gazebo_lint"]

[dev-dependencies]
indoc = { workspace = true }
maplit = { workspace = true }
assert_matches = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }
