[package]
name = "buck2_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1.24"
gazebo.version = "0.8.0"
gazebo.features = ["str_pattern_extensions"]
# @oss-disable: gazebo.path = "../gazebo/gazebo"
gazebo_lint.version = "0.1"
gazebo_lint.optional = true
# @oss-disable: gazebo_lint.path = "../gazebo_lint/gazebo_lint"
internment_tweaks = { path = "../shed/internment_tweaks" }
tempfile = "3.1.0"
derive_more = "0.99.3"
derivative = "2.1.1"
fnv = "1.0.7"
futures = "0.3"
itertools = "0.10.0"
libc = "0.2.121, <= 0.2.126"
memchr = "2.4.1"
once_cell = "1.3"
relative-path = { version = "1.7.0", features = ["serde"] }
ref-cast = "1.0.0"
sequence_trie = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.10"
tokio = { version = "1.5", features = ["full"]}
regex = "1.3.4"
sorted_vector_map.version = "0.1"
# @oss-disable: sorted_vector_map.path = "../../common/rust/shed/sorted_vector_map"
dashmap = "4.0.2"
either = "1.5"
assert_matches = "1.5"
tracing = "0.1.22"
rand = { version = "0.8.4", features = ["small_rng"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["everything"] }

[dev-dependencies]
maplit = "1.0.2"
test-case = "1.2.0"

[features]
# @oss-disable: default = ["gazebo_lint"]
