cargo-features = ["workspace-inheritance"]

[package]
name = "buck2_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
derive_more = { workspace = true }
derivative = { workspace = true }
fnv = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
memchr = { workspace = true }
once_cell = { workspace = true }
relative-path = { workspace = true }
ref-cast = { workspace = true }
sequence_trie = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
dashmap = { workspace = true }
either = { workspace = true }
assert_matches = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

gazebo = { workspace = true }
gazebo_lint.version = "0.1"
gazebo_lint.optional = true
# @oss-disable: gazebo_lint.path = "../gazebo_lint/gazebo_lint"
internment_tweaks = { path = "../shed/internment_tweaks" }
sorted_vector_map.version = "0.1"
# @oss-disable: sorted_vector_map.path = "../../common/rust/shed/sorted_vector_map"

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }
test-case = { workspace = true }

[features]
# @oss-disable: default = ["gazebo_lint"]
