cargo-features = ["workspace-inheritance"]

[package]
name = "buck2_data"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }

gazebo.version = "0.8.0"
gazebo.features = ["str_pattern_extensions"]
# @oss-disable: gazebo.path = "../gazebo/gazebo"

[build-dependencies]
tonic-build = { workspace = true }
