[package]
name = "buck2_data"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
buck2_core = { path = "../buck2_core" }

gazebo = { workspace = true }

[build-dependencies]
buck2_protoc_dev = { path = "../app/buck2_protoc_dev" }
tonic-build = { workspace = true }
