[package]
name = "buck2_data"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
allocative = { workspace = true }
either = { workspace = true }
buck2_core = { workspace = true }

gazebo = { workspace = true }

[build-dependencies]
buck2_protoc_dev = { workspace = true }
tonic-build = { workspace = true }
