[package]
description = ""
edition = "2021"
name = "buck2_docs"
version = "0.1.0"


[dependencies]
anyhow = "1.0.51"
itertools = "0.10.0"
maplit = "1.0.2"
gazebo_lint.version = "0.1"
gazebo_lint.optional = true
# @oss-disable: gazebo_lint.path = "../gazebo_lint/gazebo_lint"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
starlark = { version = "0.8", path = "../starlark-rust/starlark" }
structopt = "0.3.0"

[dev-dependencies]
tempfile = "3.1"

[[bin]]
name = "buck2_docs"
path = "bin/buck2_docs.rs"

[features]
# @oss-disable: default = ["gazebo_lint"]
