cargo-features = ["workspace-inheritance"]

[package]
name = "buck2_events"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
byteorder = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sys-info = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-epoch = { workspace = true }

# @oss-disable: build_info = { path = "../../common/rust/build_info", optional = true }
fbinit.version = "0.1"
# @oss-disable: fbinit.path = "../../common/rust/shed/fbinit"
gazebo = { workspace = true }
gazebo_lint.version = "0.1"
gazebo_lint.optional = true
# @oss-disable: gazebo_lint.path = "../gazebo_lint/gazebo_lint"
# @oss-disable: hostname = { path = "../../common/rust/shed/hostname", optional = true }
# @oss-disable: user = { path = "../../common/rust/user", optional = true }

cli_proto = { path = "../cli_proto" }
buck2_core = { path = "../buck2_core" }
buck2_data = { path = "../buck2_data" }

[features]
# @oss-disable: default = ["gazebo_lint", "extra_logging"]
# @oss-disable: extra_logging = ["build_info", "hostname", "user"]
extra_logging = [] # @oss-enable
