[package]
name = "buck2_events"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
byteorder = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sys-info = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-epoch = { workspace = true }

fbinit = { workspace = true }
gazebo = { workspace = true }
dupe = { workspace = true }
gazebo_lint.version = "0.1"
gazebo_lint.optional = true
# @oss-disable: gazebo_lint.path = "../gazebo_lint/gazebo_lint"
# @oss-disable: user = { path = "../../common/rust/user" }
allocative = { workspace = true }

cli_proto = { path = "../cli_proto" }
buck2_build_info = { workspace = true }
buck2_core = { workspace = true }
buck2_data = { workspace = true }

[features]
# @oss-disable: default = ["gazebo_lint"]
