[package]
description = "Remote-execution support for Buck"
edition = "2021"
name = "buck2_execute"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
crossbeam-channel = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sha-1 = { workspace = true }
sha2 = { workspace = true }
slog = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

dice = { path = "../dice/dice" }
# @oss-disable: edenfs = { package = "thrift", path = "../../eden/fs/service", optional = true }
fbinit = { workspace = true }
gazebo = { workspace = true }
host_sharing = { path = "../host_sharing" }
more_futures = { path = "../shed/more_futures" }
remote_execution = { workspace = true }
starlark_map = { workspace = true }

buck2_common = { path = "../buck2_common" }
buck2_core = { path = "../buck2_core" }
buck2_data = { path = "../buck2_data" }
buck2_events = { path = "../buck2_events" }
buck2_interpreter = { path = "../buck2_interpreter" }

[dev-dependencies]
assert_matches = { workspace = true }
regex = { workspace = true }

[features]
# @oss-disable: default = ["eden_materializer"]
# @oss-disable: eden_materializer = ["edenfs"]
eden_materializer = [] # @oss-enable
