[package]
name = "buck2_execute_impl"
version = "0.1.0"
edition = "2021"
description = "Implementations of executors and materializers"

[dependencies]
anyhow = { workspace = true }
async-condvar-fair = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
faccess = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rusqlite = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
zstd = { workspace = true }
hostname = { workspace = true }
gazebo = { workspace = true }
host_sharing = { workspace = true }
more_futures = { workspace = true }
remote_execution = { workspace = true }

buck2_common = { path = "../buck2_common" }
buck2_core = { path = "../app/buck2_core" }
buck2_data = { path = "../buck2_data" }
buck2_events = { path = "../buck2_events" }
buck2_execute = { path = "../buck2_execute" }
buck2_forkserver = { path = "../app/buck2_forkserver" }
buck2_forkserver_proto = { path = "../app/buck2_forkserver_proto" }

[dev-dependencies]
tempfile = { workspace = true }
assert_matches = { workspace = true }
