[package]
name = "buck2_execute_impl"
version = "0.1.0"
edition = "2021"
description = "Implementations of executors and materializers"

[dependencies]
anyhow = { workspace = true }
async-condvar-fair = { workspace = true }
async-trait = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
faccess = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
zstd = { workspace = true }
hostname = { workspace = true }
gazebo = { workspace = true }
dupe = { workspace = true }
host_sharing = { workspace = true }
more_futures = { workspace = true }
remote_execution = { workspace = true }

allocative = { workspace = true }

buck2_common = { workspace = true }
buck2_core = { workspace = true }
buck2_data = { workspace = true }
buck2_events = { workspace = true }
buck2_execute = { workspace = true }
buck2_forkserver = { workspace = true }
buck2_forkserver_proto = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_matches = { workspace = true }
