[package]
name = "buck2_forkserver"
version = "0.1.0"
edition = "2021"

[dependencies]
gazebo.version = "0.8.0"
gazebo.features = ["str_pattern_extensions"]
# @oss-disable: gazebo.path = "../gazebo/gazebo"
gazebo_lint.version = "0.1"
gazebo_lint.optional = true
# @oss-disable: gazebo_lint.path = "../gazebo_lint/gazebo_lint"

[features]
# @oss-disable: default = ["gazebo_lint"]
