[package]
name = "buck2_interpreter"
version = "0.1.0"
edition = "2021"
description = "Interprets build files and handles loading and interpreting extension files, and communicating this information to DICE"

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1.24"
buck2_core = { path = "../buck2_core" }
buck2_common = { path = "../buck2_common" }
dice = { path = "../dice/dice" }
derivative = "2.1.1"
derive_more = "0.99.3"
events = { path = "../events" }
buck2_data = { path = "../buck2_data" }
futures = "0.3"
hex = "0.4.2"
indexmap = { version = "1.6", features = ["serde-1"] }
memchr = "2.4.1"
more_futures = { path = "../shed/more_futures" }
gazebo.version = "0.7.0"
gazebo.features = ["str_pattern_extensions"]
# @oss-disable: gazebo.path = "../gazebo/gazebo"
gazebo_lint.version = "0.1"
gazebo_lint.optional = true
# @oss-disable: gazebo_lint.path = "../gazebo_lint/gazebo_lint"
hashbrown = { version = "0.11.2", features = ["raw"] }
once_cell = "1.3"
ref-cast = "1.0.0"
sha2 = "0.9"
starlark = { version = "0.8", path = "../starlark-rust/starlark" }
thiserror = "1.0.9"
tokio = { version = "1.5", features = ["full"]}
glob = "0.3.0"
regex = "1.3.1"

[features]
# @oss-disable: default = ["gazebo_lint"]

[dev-dependencies]
indoc = "1.0"
maplit = "1.0.2"
serde_json = "1.0.48"
test-case = "1.2.0"
tokio = { version = "1.5", features = ["full"]}
assert_matches = "1.5"
