[package]
name = "buck2_interpreter"
version = "0.1.0"
edition = "2021"
description = "Interprets build files and handles loading and interpreting extension files, and communicating this information to DICE"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
hashbrown = { workspace = true }
once_cell = { workspace = true }
ref-cast = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
glob = { workspace = true }

dice = { path = "../dice/dice" }
gazebo = { workspace = true }
gazebo_lint.version = "0.1"
gazebo_lint.optional = true
# @oss-disable: gazebo_lint.path = "../gazebo_lint/gazebo_lint"
starlark = { workspace = true }

buck2_common = { path = "../buck2_common" }
buck2_core = { path = "../buck2_core" }
buck2_data = { path = "../buck2_data" }
buck2_events = { path = "../buck2_events" }

[features]
# @oss-disable: default = ["gazebo_lint"]

[dev-dependencies]
indoc = { workspace = true }
maplit = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
