[package]
name = "buck2_node"
version = "0.1.0"
edition = "2021"
description = "Target graph node"

[dependencies]
anyhow = "1.0.51"
derive_more = "0.99.3"
either = "1.5"
indexmap = { version = "1.6", features = ["serde-1"] }
itertools = "0.10.0"
once_cell = "1.3"
serde = "1.0.48"
serde_json = "1.0.48"
static_assertions = "1.1.0"
thiserror = "1.0.9"
gazebo.version = "0.8.0"
gazebo.features = ["str_pattern_extensions"]
# @oss-disable: gazebo.path = "../gazebo/gazebo"
gazebo_lint.version = "0.1"
gazebo_lint.optional = true
# @oss-disable: gazebo_lint.path = "../gazebo_lint/gazebo_lint"
starlark_map = { version = "0.9.0-pre", path = "../starlark-rust/starlark_map" }
internment_tweaks = { path = "../shed/internment_tweaks" }

buck2_core = { path = "../buck2_core" }
buck2_query = { path = "../buck2_query" }
buck2_query_parser = { path = "../buck2_query_parser" }

[dev-dependencies]
maplit = "1.0.2"

[features]
# @oss-disable: default = ["gazebo_lint"]
