[package]
name = "buck2_query_parser"
version = "0.1.0"
edition = "2021"
description = "Buck2 query language parser"

[dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true }
enum-map = { workspace = true }
nom = { workspace = true }
structopt = { workspace = true }
thiserror = { workspace = true }

gazebo = { workspace = true }
gazebo_lint.version = "0.1"
gazebo_lint.optional = true
# @oss-disable: gazebo_lint.path = "../gazebo_lint/gazebo_lint"

buck2_core = { path = "../buck2_core" }

[features]
# @oss-disable: default = ["gazebo_lint"]
