[package]
authors = ["Facebook"]
description = "Proc macros for Buck's buck_query crate"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "buck2_query_proc_macro"
version = "0.4.1"

[lib]
proc-macro = true

[dependencies]
gazebo_lint.version = "0.1"
gazebo_lint.optional = true
# @oss-disable: gazebo_lint.path = "../gazebo_lint/gazebo_lint"
itertools = "0.10.0"
proc-macro2 = "1.0"
syn = {version = "1.0.27", features = ["extra-traits", "full"]}
quote = "1.0.3"
textwrap = "0.14.2"

[dev-dependencies]
trybuild = "1.0.56"

[features]
# @oss-disable: default = ["gazebo_lint"]
