[package]
description = "Some parts of Buck2 server"
edition = "2021"
name = "buck2_server"
version = "0.1.0"

[dependencies]
anyhow = "1.0.51"
async-condvar-fair = { version = "0.2.2", features = ["parking_lot_0_11"] }
async-recursion = "1.0"
async-trait = "0.1.24"
blake3 = "0.3.7"
chrono = "0.4.19"
crossbeam-channel = "0.5"
dashmap = "4.0.2"
derivative = "2.1.1"
dirs = "3.0.1"
flate2 = "1.0.22"
futures = "0.3"
indent_write = "2.2.0"
indexmap = { version = "1.6", features = ["serde-1"] }
itertools = "0.10.0"
libc = "0.2.103"
lsp-server = "0.5"
lsp-types = "0.93.0"
once_cell = "1.3"
os_str_bytes = "6.0"
num_cpus = "1.11"
parking_lot = "0.11.2"
prost-types = "0.10"
regex = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
siphasher = "0.3.5"
tempfile = "3.1.0"
thiserror = "1.0.9"
threadpool = "1.8.1"
tokio = {version = "1.5", features = ["full"]}
tokio-stream = { version = "0.1.4", features = ["fs", "io-util", "net", "sync", "time"] }
tonic = "0.7.2"
tower = "0.4"
tracing = "0.1.22"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.3.2"

fbinit = { path = "../../common/rust/shed/fbinit" }
gazebo.version = "0.8.0"
gazebo.features = ["str_pattern_extensions"]
# @oss-disable: gazebo.path = "../gazebo/gazebo"
dice = { path = "../dice/dice" }
starlark = { version = "0.9.0-pre", path = "../starlark-rust/starlark" }
watchman_client.version = "0.8.0"
# @oss-disable: watchman_client.path = "../../watchman/rust/watchman_client"

buck2_build_api = { path = "../buck2_build_api" }
buck2_common = { path = "../buck2_common" }
buck2_core = { path = "../buck2_core" }
buck2_data = { path = "../buck2_data" }
buck2_forkserver = { path = "../buck2_forkserver" }
buck2_interpreter = { path = "../buck2_interpreter" }
buck2_node = { path = "../buck2_node" }
buck2_query = { path = "../buck2_query" }
cli_proto = { path = "../cli_proto" }
buck2_events = { path = "../buck2_events" }
host_sharing = { path = "../host_sharing" }
install_proto = {path = "../install_proto"}

[target.'cfg(unix)'.dependencies]
jemalloc-ctl = "0.3.3"

[dev-dependencies]
assert_matches = "1.5"
derive_more = "0.99.3"
maplit = "1.0.2"
