[package]
description = "Some parts of Buck2 server"
edition = "2021"
name = "buck2_server"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
constant_time_eq = { workspace = true }
crossbeam-channel = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
inferno = { workspace = true }
itertools = { workspace = true }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
once_cell = { workspace = true }
maplit = { workspace = true }
notify = { workspace = true }
num_cpus = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
sync_wrapper = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

allocative = { workspace = true }
fbinit = { workspace = true }
gazebo = { workspace = true }
dupe = { workspace = true }
dice = { path = "../dice/dice" }
more_futures = { workspace = true }
starlark = { workspace = true }
watchman_client.version = "0.8.0"
# @oss-disable: watchman_client.path = "../../watchman/rust/watchman_client"

buck2_build_api = { workspace = true }
buck2_common = { workspace = true }
buck2_core = { workspace = true }
buck2_data = { workspace = true }
buck2_execute = { workspace = true }
buck2_execute_impl = { workspace = true }
buck2_forkserver = { workspace = true }
buck2_interpreter = { workspace = true }
buck2_interpreter_for_build = { workspace = true }
buck2_profile = { workspace = true }
buck2_server_ctx = { workspace = true }
buck2_cli_proto = { workspace = true }
buck2_events = { workspace = true }
host_sharing = { workspace = true }

[target.'cfg(unix)'.dependencies]
jemalloc-ctl = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
maplit = { workspace = true }
tempfile = { workspace = true }
