[package]
name = "buck2_server_commands"
version = "0.1.0"
edition = "2021"
description = "Implementation of several Buck commands"

[dependencies]
anyhow = "1.0.51"
async-recursion = "1.0"
async-trait = "0.1.24"
blake3 = "0.3.7"
chrono = "0.4.19"
derivative = "2.1.1"
futures = "0.3"
indent_write = "2.2.0"
indexmap = { version = "1.6", features = ["serde-1"] }
itertools = "0.10.0"
num_cpus = "1.11"
once_cell = "1.3"
os_str_bytes = "6.0"
regex = "1.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
siphasher = "0.3.5"
tempfile = "3.1.0"
threadpool = "1.8.1"
thiserror = "1.0.24"
tokio = { version = "1.5", features = ["full"] }
tokio-stream = { version = "0.1.4", features = ["fs", "io-util", "net", "sync", "time"] }
tonic = "0.7.2"
tracing = "0.1.22"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.3.2"

dice = { path = "../dice/dice" }
gazebo = { path = "../gazebo/gazebo" }

buck2_build_api = { path = "../buck2_build_api" }
buck2_common = { path = "../buck2_common" }
buck2_core = { path = "../buck2_core" }
buck2_data = { path = "../buck2_data" }
buck2_events = { path = "../buck2_events" }
buck2_interpreter_for_build = { path = "../buck2_interpreter_for_build" }
buck2_node = { path = "../buck2_node" }
buck2_query = { path = "../buck2_query" }
buck2_server_ctx = { path = "../buck2_server_ctx" }
cli_proto = { path = "../cli_proto" }
install_proto = { path = "../install_proto" }

[features]
# @oss-disable: default = ["eden_materializer"]
# @oss-disable: eden_materializer = []
eden_materializer = [] # @oss-enable
